# Possehl_Analytics-puzzle

./: README  README.md  main.cabal  puzzle
src/: Main.hs
